Self_Paced_Exercices/Traffic_Management/Configuring_Ingress_and_Egress_Traffic/Gateway_non_wildcarrd_Host/answer/Gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: patrick-star-gw
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
    app.kubernetes.io/instance: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - patrick.star
